Project Eventide_V2 {
  database_type: 'PostgreSQL'
  Note: 'Four logical databases on one RDS instance. References across databases are identifiers only, never foreign keys.'
}

Table auth_db.user {
  id text [pk]
  name text [not null]
  email text [not null, unique]
  email_verified boolean [not null, default: false]
  image text
  role text [default: 'attendee', note: 'attendee | organizer | admin']
  banned boolean [default: false]
  ban_reason text
  ban_expires timestamp
  phone text
  organizer_display_name text
  organizer_contact_email text
  organizer_contact_phone text
  organizer_approval_status text [not null, default: 'NOT_APPLIED']
  organizer_approved_at timestamp
  organizer_reject_reason text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}
Table auth_db.session {
  id text [pk]
  user_id text [not null]
  token text [not null, unique]
  expires_at timestamp [not null]
  impersonated_by text
  created_at timestamp
  updated_at timestamp
}
Table auth_db.account {
  id text [pk]
  user_id text [not null]
  account_id text [not null]
  provider_id text [not null]
  password text
  access_token text
  refresh_token text
  id_token text
  created_at timestamp
  updated_at timestamp
}
Table auth_db.verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamp [not null]
}
Table auth_db.jwks {
  id text [pk]
  public_key text [not null]
  private_key text [not null]
  created_at timestamp [not null]
  expires_at timestamp
  alg text
  crv text
}
Table auth_db.rate_limit {
  id text [pk]
  key text [not null, unique]
  count int [not null]
  last_request bigint [not null]
}
Table auth_db.login_attempts {
  id uuid [pk]
  email text [not null]
  ip_address text
  outcome text [not null]
  created_at timestamp [not null]
}
Table auth_db.user_audit_logs {
  id uuid [pk]
  actor_id text
  target_user_id text
  action text [not null]
  details text
  created_at timestamp [not null]
}

Ref: auth_db.session.user_id > auth_db.user.id [delete: cascade]
Ref: auth_db.account.user_id > auth_db.user.id [delete: cascade]
Ref: auth_db.user_audit_logs.actor_id > auth_db.user.id [delete: set null]
Ref: auth_db.user_audit_logs.target_user_id > auth_db.user.id [delete: set null]

Table event_db.categories {
  id uuid [pk]
  name text [not null, unique]
  slug text [not null, unique]
  created_at timestamp [not null]
}
Table event_db.venues {
  id uuid [pk]
  name text [not null]
  address text [not null]
  province text [not null]
  postal_code text
  capacity int
  created_at timestamp [not null]
}
Table event_db.events {
  id uuid [pk]
  category_id uuid
  venue_id uuid
  owner_id text [not null, note: 'auth_db.user.id, no FK']
  title text [not null]
  description text
  status text [not null]
  starts_at timestamp [not null]
  ends_at timestamp [not null]
  sales_start_at timestamp [not null]
  sales_end_at timestamp [not null]
  capacity int [not null]
  refund_percent int [not null]
  created_at timestamp
  updated_at timestamp
}
Table event_db.ticket_types {
  id uuid [pk]
  event_id uuid [not null]
  name text [not null]
  description text
  price decimal(12,2) [not null]
  quota int [not null]
  max_per_order int [not null]
  max_per_user int [not null]
  sales_start_at timestamp
  sales_end_at timestamp
  created_at timestamp
  updated_at timestamp
}
Table event_db.event_images {
  id uuid [pk]
  event_id uuid [not null]
  object_key text [not null, unique]
  alt_text text
  position int [not null]
  created_at timestamp
}
Table event_db.event_change_logs {
  id uuid [pk]
  event_id uuid [not null]
  actor_id text [not null, note: 'auth_db.user.id, no FK']
  action text [not null]
  details text
  created_at timestamp
}
Ref: event_db.events.category_id > event_db.categories.id [delete: set null]
Ref: event_db.events.venue_id > event_db.venues.id [delete: set null]
Ref: event_db.ticket_types.event_id > event_db.events.id [delete: cascade]
Ref: event_db.event_images.event_id > event_db.events.id [delete: cascade]
Ref: event_db.event_change_logs.event_id > event_db.events.id [delete: cascade]

Table registration_db.ticket_inventory {
  ticket_type_id uuid [pk, note: 'event_db.ticket_types.id, no FK']
  event_id uuid [not null, note: 'event_db.events.id, no FK']
  total_quota int [not null]
  reserved_count int [not null]
  sold_count int [not null]
  updated_at timestamp
}
Table registration_db.orders {
  id uuid [pk]
  user_id text [not null, note: 'auth_db.user.id, no FK']
  event_id uuid [not null, note: 'event_db.events.id, no FK']
  event_title text [not null]
  status text [not null]
  currency text [not null]
  refund_percent int [not null]
  subtotal decimal(12,2) [not null]
  total decimal(12,2) [not null]
  expires_at timestamp [not null]
  confirmed_at timestamp
  cancelled_at timestamp
  created_at timestamp
  updated_at timestamp
}
Table registration_db.order_items {
  id uuid [pk]
  order_id uuid [not null]
  ticket_type_id uuid [not null, note: 'event_db.ticket_types.id, no FK']
  ticket_type_name text [not null]
  unit_price decimal(12,2) [not null]
  quantity int [not null]
  line_total decimal(12,2) [not null]
}
Table registration_db.order_audit_logs {
  id uuid [pk]
  order_id uuid [not null]
  actor_id text
  action text [not null]
  details text
  created_at timestamp
}
Table registration_db.tickets {
  id uuid [pk]
  order_id uuid [not null]
  order_item_id uuid [not null]
  ticket_type_id uuid [not null]
  event_id uuid [not null]
  user_id text [not null]
  event_title text [not null]
  ticket_type_name text [not null]
  status text [not null]
  issued_at timestamp [not null]
}
Table registration_db.check_ins {
  id uuid [pk]
  ticket_id uuid
  event_id uuid
  scanner_id text [not null]
  result text [not null]
  payload_hash text [not null]
  created_at timestamp
}
Table registration_db.idempotency_keys {
  id uuid [pk]
  scope text [not null]
  key text [not null]
  user_id text [not null]
  request_hash text [not null]
  resource_id uuid
  response_status int
  response_body text
  created_at timestamp
}
Ref: registration_db.order_items.order_id > registration_db.orders.id [delete: cascade]
Ref: registration_db.order_audit_logs.order_id > registration_db.orders.id [delete: cascade]
Ref: registration_db.tickets.order_id > registration_db.orders.id [delete: restrict]
Ref: registration_db.tickets.order_item_id > registration_db.order_items.id [delete: restrict]
Ref: registration_db.check_ins.ticket_id > registration_db.tickets.id [delete: set null]

Table payment_db.payments {
  id uuid [pk]
  order_id uuid [not null, unique, note: 'registration_db.orders.id, no FK']
  user_id text [not null]
  status text [not null]
  amount decimal(12,2) [not null]
  currency text [not null]
  provider text [not null]
  provider_reference text
  created_at timestamp
  updated_at timestamp
}
Table payment_db.payment_attempts {
  id uuid [pk]
  payment_id uuid [not null]
  idempotency_key text [not null, unique]
  attempt_number int [not null]
  status text [not null]
  error_message text
  created_at timestamp
}
Table payment_db.refunds {
  id uuid [pk]
  payment_id uuid [not null]
  order_id uuid [not null, unique]
  amount decimal(12,2) [not null]
  status text [not null]
  reason text
  created_at timestamp
  completed_at timestamp
}
Ref: payment_db.payment_attempts.payment_id > payment_db.payments.id [delete: cascade]
Ref: payment_db.refunds.payment_id > payment_db.payments.id [delete: restrict]
